--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.twitter.sdk.android:twitter:3.2.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.wang.avi:library:2.1.3'
+
+    implementation project(path: ':ResideMenu')
 
 }
 
