--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,14 +58,18 @@
         <activity
             android:name=".activity.ChangePasswordActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.SuccesChangePasswordActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.SuccesChangePasswordActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-
+        <activity android:name=".activity.ScoreboardActivity"
+            android:screenOrientation="portrait">
+            
+        </activity>
     </application>
 
 </manifest>
