--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,15 +61,27 @@
         <activity
             android:name=".activity.SuccesChangePasswordActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ScoreboardActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.StatsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SuccessCreatedUserAcitvity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.MyFansActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.NewRequestActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.LimitedUserActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.FollowingActivity"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
-        <activity android:name=".activity.ScoreboardActivity"
-            android:screenOrientation="portrait">
-            
-        </activity>
     </application>
 
 </manifest>
